新增 CI/CD 流程 (#4)
* build: add gh-pages env

* ci: add CI/CD

* fix: solve build error

* fix: modify gitignore

--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "scripts": {
     "build": "vue-tsc --noEmit && vite build",
+    "build:gh-pages": "vue-tsc --noEmit && vite build --mode gh-pages",
     "dev": "vite",
+    "dev:gh-pages": "vite --mode gh-pages",
     "prepare": "husky install",
     "preview": "vite preview",
+    "preview:gh-pages": "vite preview --mode gh-pages",
     "lint:script": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx",
     "lint:style": "stylelint  src/**/*.{vue,scss,css,sass,less} --fix"
   },
